--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <version>5.9.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.6.0</version>
+        </dependency>
     </dependencies>
 
 </project>
